--- a/index.html
+++ b/index.html
@@ -8,13 +8,23 @@
     </link>
     <meta name=“robots” content=index, follow”>
 
+	<meta name="description" content="">
 
-    <meta property=”og:title” content="Puddle Studios">
-    <meta property=”og:description” content="Puddle-Studios founded in 2020 is a solo indie game developement studio working on 'Forgotten God'">
-    <meta property="og:url" content="https://puddle-studios.com">
+<!-- Facebook Meta Tags -->
+<meta property="og:url" content="https://puddle-studios.com">
+<meta property="og:type" content="website">
+<meta property="og:title" content="Puddle Studios">
+<meta property="og:description" content="">
+<meta property="og:image" content="https://puddle-studios.com\assets\images\Puddle Logos.png">
 
-    <meta property="og:image" content="\assets\images\Puddle Logos.png">
-    <meta name="twitter:image" content="\assets\images\Puddle Logos.png">
+<!-- Twitter Meta Tags -->
+<meta name="twitter:card" content="summary_large_image">
+<meta property="twitter:domain" content="puddle-studios.com">
+<meta property="twitter:url" content="https://puddle-studios.com">
+<meta name="twitter:title" content="Puddle Studios">
+<meta name="twitter:description" content="">
+<meta name="twitter:image" content="https://puddle-studios.com\assets\images\Puddle Logos.png">
+
 
 </head>
 
