--- a/Game Pages/The Designer.html
+++ b/Game Pages/The Designer.html
@@ -7,6 +7,21 @@
     <link rel="shortcut icon" type="x-icon" href="../assets/images/Tray Icon.png">
     </link>
     <meta name=“robots” content=index, follow”>
+    <meta name="description" content="The Designer by puddle studios">
+
+    <meta property="og:url" content="https://puddle-studios.com/Game Pages/The Designer.html">
+    <meta property="og:type" content="website">
+    <meta property="og:title" content="Puddle Studios The Designer">
+    <meta property="og:description" content="The Designer by puddle studios">
+    <meta property="og:image" content="https://puddle-studios.com\assets\images\The Designer Web Logo.png">
+
+    <meta name="twitter:card" content="summary_large_image">
+    <meta property="twitter:domain" content="puddle-studios.com">
+    <meta property="twitter:url" content="https://puddle-studios.com/Game Pages/The Designer.html">
+    <meta name="twitter:title" content="Puddle Studios The Designer">
+    <meta name="twitter:description" content="The Designer by puddle studios">
+    <meta name="twitter:image" content="https://puddle-studios.com\assets\images\The Designer Web Logo.png">
+
 </head>
 
 
