--- a/Game Pages/Planetarium.html
+++ b/Game Pages/Planetarium.html
@@ -7,8 +7,22 @@
     <link rel="shortcut icon" type="x-icon" href="../assets/images/Tray Icon.png">
     </link>
     <meta name=“robots” content=index, follow”>
-</head>
+    <meta name="description" content="Planetarium by puddle studios">
 
+    <meta property="og:url" content="https://puddle-studios.com/Game Pages/Planetarium.html">
+    <meta property="og:type" content="website">
+    <meta property="og:title" content="Puddle Studios Planetarium">
+    <meta property="og:description" content="Planetarium by puddle studios">
+    <meta property="og:image" content="https://puddle-studios.com\assets\images\Planetarium Web Logo.png">
+
+    <meta name="twitter:card" content="summary_large_image">
+    <meta property="twitter:domain" content="puddle-studios.com">
+    <meta property="twitter:url" content="https://puddle-studios.com/Game Pages/Planetarium.html">
+    <meta name="twitter:title" content="Puddle Studios Planetarium">
+    <meta name="twitter:description" content="Planetarium by puddle studios">
+    <meta name="twitter:image" content="https://puddle-studios.com\assets\images\Planetarium Web Logo.png">
+
+</head>
 
 
 <body class="body">
