--- a/Social.html
+++ b/Social.html
@@ -9,12 +9,23 @@
     <meta name=“robots” content=index, follow”>
 
 
-    <meta property=”og:title” content="Puddle Studios">
-    <meta property=”og:description” content="">
-    <meta property="og:url" content="https://puddle-studios.com">
+    <meta name="description"
+    content="Puddle studios is a solo indie game dev studio located in Florida. currently working on 'Forgotten God'.">
 
-    <meta property="og:image" content="">
-    <meta name="twitter:image" content="assets/images/Tray Icon.png">
+<meta property="og:url" content="https://puddle-studios.com">
+<meta property="og:type" content="website">
+<meta property="og:title" content="Puddle Studios">
+<meta property="og:description"
+    content="Puddle studios is a solo indie game dev studio located in Florida. currently working on 'Forgotten God'.">
+<meta property="og:image" content="https://puddle-studios.com\assets\images\Embed Cover.png">
+
+<meta name="twitter:card" content="summary_large_image">
+<meta property="twitter:domain" content="puddle-studios.com">
+<meta property="twitter:url" content="https://puddle-studios.com">
+<meta name="twitter:title" content="Puddle Studios">
+<meta name="twitter:description"
+    content="Puddle studios is a solo indie game dev studio located in Florida. currently working on 'Forgotten God'.">
+<meta name="twitter:image" content="https://puddle-studios.com\assets\images\Embed Cover.png">
 
 </head>
 
