--- a/index.html
+++ b/index.html
@@ -8,22 +8,23 @@
     </link>
     <meta name=“robots” content=index, follow”>
 
-	<meta name="description" content="Puddle studios is a solo indie game dev studio currently located in Florida. currently working on 'Forgotten God'.">
+    <meta name="description"
+        content="Puddle studios is a solo indie game dev studio located in Florida. currently working on 'Forgotten God'.">
 
-<!-- Facebook Meta Tags -->
-<meta property="og:url" content="https://puddle-studios.com">
-<meta property="og:type" content="website">
-<meta property="og:title" content="Puddle Studios">
-<meta property="og:description" content="Puddle studios is a solo indie game dev studio currently located in Florida. currently working on 'Forgotten God'.">
-<meta property="og:image" content="https://puddle-studios.com\assets\images\Embed Cover.png">
+    <meta property="og:url" content="https://puddle-studios.com">
+    <meta property="og:type" content="website">
+    <meta property="og:title" content="Puddle Studios">
+    <meta property="og:description"
+        content="Puddle studios is a solo indie game dev studio located in Florida. currently working on 'Forgotten God'.">
+    <meta property="og:image" content="https://puddle-studios.com\assets\images\Embed Cover.png">
 
-<!-- Twitter Meta Tags -->
-<meta name="twitter:card" content="summary_large_image">
-<meta property="twitter:domain" content="puddle-studios.com">
-<meta property="twitter:url" content="https://puddle-studios.com">
-<meta name="twitter:title" content="Puddle Studios">
-<meta name="twitter:description" content="Puddle studios is a solo indie game dev studio currently located in Florida. currently working on 'Forgotten God'.">
-<meta name="twitter:image" content="https://puddle-studios.com\assets\images\Embed Cover.png">
+    <meta name="twitter:card" content="summary_large_image">
+    <meta property="twitter:domain" content="puddle-studios.com">
+    <meta property="twitter:url" content="https://puddle-studios.com">
+    <meta name="twitter:title" content="Puddle Studios">
+    <meta name="twitter:description"
+        content="Puddle studios is a solo indie game dev studio located in Florida. currently working on 'Forgotten God'.">
+    <meta name="twitter:image" content="https://puddle-studios.com\assets\images\Embed Cover.png">
 
 </head>
 
@@ -314,7 +315,7 @@
             <section class="section-divider"></section>
             <section class="section-divider no-line micro"></section>
 
-<section class="text-footer no-outline align-center span-four">© 2024 puddle-studios.</section>
+            <section class="text-footer no-outline align-center span-four">© 2024 puddle-studios.</section>
 
             <section class="section-divider no-line"></section>
             <section class="section-divider no-line"></section>
