--- a/Games.html
+++ b/Games.html
@@ -4,6 +4,8 @@
         <title>Puddle Studios</title>
         <link rel="stylesheet" href="assets/css/styles.css">
         <link rel="shortcut icon" type="x-icon" href="assets/images/Tray Icon.png">
+        <link rel="icon" type="image/x-icon" href="/images/Tray Icon.png">
+
         </link>
         <meta name=“robots” content=index, follow”>
         <meta name="description"
