added favicon files

--- a/Games.html
+++ b/Games.html
@@ -7,7 +7,7 @@
         <link rel="icon" type="image/x-icon" href="/images/Tray Icon.png">
 
         </link>
-        <meta name=“robots” content=index, follow”>
+        <meta name=“robots” content="index, follow">
         <meta name="description"
         content="Puddle studios is a solo indie game dev studio located in Florida. currently working on 'Forgotten God'.">
 
@@ -16,7 +16,7 @@
     <meta property="og:title" content="Puddle Studios">
     <meta property="og:description"
         content="Puddle studios is a solo indie game dev studio located in Florida. currently working on 'Forgotten God'.">
-    <meta property="og:image" content="https://puddle-studios.com\assets\images\Embed Cover.png">
+        <meta property="og:image" content="https://puddle-studios.com/assets/images/Embed Cover.png">
 
     <meta name="twitter:card" content="summary_large_image">
     <meta property="twitter:domain" content="puddle-studios.com">
@@ -24,7 +24,7 @@
     <meta name="twitter:title" content="Puddle Studios">
     <meta name="twitter:description"
         content="Puddle studios is a solo indie game dev studio located in Florida. currently working on 'Forgotten God'.">
-    <meta name="twitter:image" content="https://puddle-studios.com\assets\images\Embed Cover.png">
+        <meta property="twitter:image" content="https://puddle-studios.com/assets/images/Embed Cover.png">
 
 </head>
 
