--- a/index.html
+++ b/index.html
@@ -1,14 +1,20 @@
 <!DOCTYPE html>
 <html>
-
 <head>
-    <title>Puddle Studios</title>
+    <title>Puddle Studios | Indie Games</title>
     <link rel="stylesheet" href="assets/css/styles.css">
-    <link rel="shortcut icon" type="x-icon" href="assets/images/Tray Icon.png">
-    <link rel="icon" type="image/x-icon" href="/images/Tray Icon.png">
+    
+    <link rel="icon" href="assets/images/Icons/Favicon-512.ico" type="image/x-icon">
+    
+    <link rel="icon" href="assets/images/Icons/Favicon-512.png" type="image/png">
+
+
+    <link rel="shortcut icon" type="image/png" href="assets/images/Tray Icon.png">
+
+
 
     </link>
-    <meta name=“robots” content=index, follow”>
+    <meta name=“robots” content="index, follow">
 
     <meta name="description"
         content="Puddle studios is a solo indie game dev studio located in Florida. currently working on 'Forgotten God'.">
@@ -18,7 +24,7 @@
     <meta property="og:title" content="Puddle Studios">
     <meta property="og:description"
         content="Puddle studios is a solo indie game dev studio located in Florida. currently working on 'Forgotten God'.">
-    <meta property="og:image" content="https://puddle-studios.com\assets\images\Embed Cover.png">
+    <meta property="og:image" content="https://puddle-studios.com/assets/images/Embed Cover.png">
 
     <meta name="twitter:card" content="summary_large_image">
     <meta property="twitter:domain" content="puddle-studios.com">
@@ -26,8 +32,10 @@
     <meta name="twitter:title" content="Puddle Studios">
     <meta name="twitter:description"
         content="Puddle studios is a solo indie game dev studio located in Florida. currently working on 'Forgotten God'.">
-    <meta name="twitter:image" content="https://puddle-studios.com\assets\images\Embed Cover.png">
-
+    <meta property="twitter:image" content="https://puddle-studios.com/assets/images/Embed Cover.png">
+    <meta name="keywords"
+        content="Puddle, Rowan Byington, Rowan, Byington, Puddle Studios, PuddleStudios, Labyrinth, Forgotten God">
+    <meta name="author" content="Rowan Byington">
 </head>
 
 
@@ -62,7 +70,7 @@
                     <section class="hero-card-cover Style1"></section>
                     <section>
 
-                        <img src="assets/images/Artist Card.png">
+                        <img src="assets/images/Artist Card.png" alt="Artist Card">
                     </section>
                 </section>
 
@@ -71,14 +79,14 @@
                     </section>
                     <section>
 
-                        <img src="assets/images/Profile Pic Website 5.png">
+                        <img src="assets/images/Profile Pic Website 5.png" alt="Rowan Byington Portrait">
                     </section>
 
                 </section>
                 <section class="hero-card Style4">
                     <section>
 
-                        <img src="assets/images/Developer Card.png">
+                        <img src="assets/images/Developer Card.png" alt="Developer Card">
                     </section>
                     <section class="hero-card-cover Style3"></section>
                 </section>
@@ -186,7 +194,7 @@
 
                     <section>
                         <a href="Game Pages/Labyrinth.html" class="fill-div">
-                            <img src="assets/images/Labyrinth Web Logo.png" alt="Mechanical Labyrinth Logo" width="100%"
+                            <img src="assets/images/Labyrinth Web Logo.png" alt="Labyrinth Logo" width="100%"
                                 height="100%">
                         </a>
                     </section>
@@ -200,7 +208,7 @@
 
                     <section>
                         <a href="Game Pages/Stelarium.html" class="fill-div">
-                            <img src="assets/images/Stellarium Web Logo.png" alt="Mechanical Labyrinth Logo"
+                            <img src="assets/images/Stellarium Web Logo.png" alt="Stellarium Logo"
                                 width="100%" height="100%">
                         </a>
                     </section>
@@ -215,7 +223,7 @@
 
                     <section>
                         <a href="Game Pages/Planetarium.html" class="fill-div">
-                            <img src="assets/images/Planetarium Web Logo.png" alt="Mechanical Labyrinth Logo"
+                            <img src="assets/images/Planetarium Web Logo.png" alt="Planetarium Logo"
                                 width="100%" height="100%">
                         </a>
                     </section>
@@ -232,7 +240,7 @@
 
                     <section>
                         <a href="Game Pages/The Designer.html" class="fill-div">
-                            <img src="assets/images/The Designer Web Logo.png" alt="Mechanical Labyrinth Logo"
+                            <img src="assets/images/The Designer Web Logo.png" alt="The Designer Logo"
                                 width="100%" height="100%">
                         </a>
                     </section>
@@ -246,7 +254,7 @@
 
                     <section>
                         <a href="Game Pages/Uno.html" class="fill-div">
-                            <img src="assets/images/Uno Web Logo.png" alt="Mechanical Labyrinth Logo" width="100%"
+                            <img src="assets/images/Uno Web Logo.png" alt="Game Pages Logo" width="100%"
                                 height="100%">
                         </a>
                     </section>
@@ -262,7 +270,7 @@
 
                     <section>
                         <a href="Game Pages/Babylon.html" class="fill-div">
-                            <img src="assets/images/Babylon Web Logo.png" alt="Mechanical Labyrinth Logo" width="100%"
+                            <img src="assets/images/Babylon Web Logo.png" alt="Babylon Logo" width="100%"
                                 height="100%">
                         </a>
                     </section>
@@ -275,7 +283,7 @@
 
                     <section>
                         <a href="Game Pages/GOL.html" class="fill-div">
-                            <img src="assets/images/Game Of Life Web Logo.png" alt="Mechanical Labyrinth Logo"
+                            <img src="assets/images/Game Of Life Web Logo.png" alt="Game Of Life Logo"
                                 width="100%" height="100%">
                         </a>
                     </section>
@@ -296,18 +304,18 @@
             <section class="DisplayGrid Style1 span-four">
 
                 <section class="span-two-vert clickable">
-                    <a href="Art.html"><img src="assets/images/Art Display 3.png"></a>
+                    <a href="Art.html"><img src="assets/images/Art Display 3.png" alt="Puddle Studios Art"></a>
                 </section>
                 <section class="span-three clickable">
-                    <a href="Art.html"><img src="assets/images/Art Display 2.png"></a>
+                    <a href="Art.html"><img src="assets/images/Art Display 2.png" alt="Puddle Studios Art"></a>
                 </section>
                 <section class="span-two clickable">
-                    <a href="Art.html"><img src="assets/images/Art Display 5.png"></a>
+                    <a href="Art.html"><img src="assets/images/Art Display 5.png" alt="Puddle Studios Art"></a>
 
 
                 </section>
                 <section class="span-one clickable">
-                    <a href="Art.html"><img src="assets/images/Art Display 1.png"></a>
+                    <a href="Art.html"><img src="assets/images/Art Display 1.png" alt="Puddle Studios Art"></a>
                 </section>
             </section>
 
