Updated meta tags

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Puddle Studios | Indie Games</title>
+    <title>Puddle Studios</title>
     <link rel="stylesheet" href="assets/css/styles.css">
     
     <link rel="icon" href="assets/images/Tray Icon.ico" type="image/x-icon">
@@ -32,8 +32,7 @@
     <meta name="twitter:description"
         content="Puddle studios is a solo indie game dev studio located in Florida. currently working on 'Forgotten God'.">
     <meta property="twitter:image" content="https://puddle-studios.com/assets/images/Embed Cover.png">
-    <meta name="keywords"
-        content="Puddle Studios Puddle, PuddleStudios">
+   
     <meta name="author" content="Rowan Byington">
 </head>
 
