--- a/index.html
+++ b/index.html
@@ -2,6 +2,11 @@
 <html>
 <head>
     <title>Puddle Studios</title>
+    <header class="invisible">
+        Puddle studios is an indie game developement studio located in florida, founded in 2020 by puddle.
+    </header>
+
+
     <link rel="stylesheet" href="assets/css/styles.css">
     
     <link rel="icon" href="assets/images/Tray Icon.ico" type="image/x-icon">
