--- a/Game Pages/MechMaze.html
+++ b/Game Pages/MechMaze.html
@@ -4,8 +4,13 @@
 <head>
     <title>Puddle Studios MechMaze</title>
     <link rel="stylesheet" href="../assets/css/styles.css">
-    <link rel="shortcut icon" type="x-icon" href="../assets/images/Tray Icon.png">
-    </link>
+      
+    <link rel="icon" type="image/png" href="/assets/images/Icons/favicon/favicon-48x48.png" sizes="48x48" />
+    <link rel="icon" type="image/svg+xml" href="/assets/images/Icons/favicon/favicon.svg" />
+    <link rel="shortcut icon" href="/assets/images/Icons/favicon/favicon.ico" />
+    <link rel="apple-touch-icon" sizes="180x180" href="/assets/images/Icons/favicon/apple-touch-icon.png" />
+    <meta name="apple-mobile-web-app-title" content="Puddle Studios" />
+    <link rel="manifest" href="/assets/images/Icons/favicon/site.webmanifest" />
     <meta name=“robots” content=index, follow”>
     <meta name="description" content="Mechanical Labyrinth by puddle studios">
 
