--- a/Games.html
+++ b/Games.html
@@ -1,17 +1,23 @@
 <!DOCTYPE html>
 <html>
     <head>
+        
         <title>Puddle Studios</title>
         <link rel="stylesheet" href="assets/css/styles.css">
-        <link rel="shortcut icon" type="x-icon" href="assets/images/Tray Icon.png">
-        <link rel="icon" type="image/x-icon" href="/images/Tray Icon.png">
+       
+        <link rel="icon" type="image/png" href="/assets/images/Icons/favicon/favicon-48x48.png" sizes="48x48" />
+        <link rel="icon" type="image/svg+xml" href="/assets/images/Icons/favicon/favicon.svg" />
+        <link rel="shortcut icon" href="/assets/images/Icons/favicon/favicon.ico" />
+        <link rel="apple-touch-icon" sizes="180x180" href="/assets/images/Icons/favicon/apple-touch-icon.png" />
+        <meta name="apple-mobile-web-app-title" content="Puddle Studios" />
+        <link rel="manifest" href="/assets/images/Icons/favicon/site.webmanifest" />
 
         </link>
         <meta name=“robots” content="index, follow">
         <meta name="description"
         content="Puddle studios is a solo indie game dev studio located in Florida. currently working on 'Forgotten God'.">
 
-    <meta property="og:url" content="https://puddle-studios.com">
+    <meta property="og:url" content="https://puddle-studios.com/Games">
     <meta property="og:type" content="website">
     <meta property="og:title" content="Puddle Studios">
     <meta property="og:description"
@@ -20,7 +26,7 @@
 
     <meta name="twitter:card" content="summary_large_image">
     <meta property="twitter:domain" content="puddle-studios.com">
-    <meta property="twitter:url" content="https://puddle-studios.com">
+    <meta property="twitter:url" content="https://puddle-studios.com/Games">
     <meta name="twitter:title" content="Puddle Studios">
     <meta name="twitter:description"
         content="Puddle studios is a solo indie game dev studio located in Florida. currently working on 'Forgotten God'.">
