Added site map and canonical tags

--- a/Social.html
+++ b/Social.html
@@ -4,7 +4,8 @@
 <head>
     <title>Puddle Studios</title>
     <link rel="stylesheet" href="assets/css/styles.css">
-  
+    <link rel="canonical" href="https://puddle-studios.com/Social.html" />
+
     <link rel="icon" type="image/png" href="/assets/images/Icons/favicon/favicon-48x48.png" sizes="48x48" />
     <link rel="icon" type="image/svg+xml" href="/assets/images/Icons/favicon/favicon.svg" />
     <link rel="shortcut icon" href="/assets/images/Icons/favicon/favicon.ico" />
