--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
 
     <link rel="stylesheet" href="assets/css/styles.css">
 
-    
+    <link rel="canonical" href="https://puddle-studios.com/" />
+
     <meta name='keywords' content='puddle, puddle studios, indie games, game developer, game dev'>
     <meta name='description' content='Puddle Studios is a solo indie game dev team founded in 2020 by puddle. Puddle Studios is currently working on their first commercial game Forgotten God.'>
     <meta name='subject' content='Puddle Studios Portfolio and Buisness'>
