--- a/Social.html
+++ b/Social.html
@@ -41,9 +41,8 @@
     <div id="preloader"></div>
 
     <header>
-        <section class="HeaderButton"><a href="Social.html">SOCIAL</a></section>
-        <section class="HeaderButton"><a href="Games.html">GAMES</a></section>
-
+        <h1 class="pseudo-section header-button"><a href="Social.html">SOCIAL</a></h1>
+        <h1 class="pseudo-section header-button"><a href="Games.html">GAMES</a></h1>
         <section class="MenuWrapper no-outline Home">
             <a href="index.html" class="home-link"></a>
             <section class="MenuMoon Moon1"><img src="assets/images/Moons/Full Moon.png"></section>
@@ -53,14 +52,14 @@
             <section class="MenuMoon Moon5"><img src="assets/images/Moons/Cresent Moon Flip 2.png"></section>
         </section>
 
-        <section class="HeaderButton"><a href="Art.html">ART</a></section>
-        <section class="HeaderButton"><a href="https://puddleglum.itch.io/" target="_blank">ITCH</a></section>
-    </header>
+        <h1 class="pseudo-section header-button"><a href="Art.html">ART</a></h1>
+        <h1 class="pseudo-section header-button"><a href="https://puddleglum.itch.io/" target="_blank">ITCH</a></h1>
+    </header> 
 
     <div class="GridWrapper">
         <section class="GlobalGrid">
             <section class="section-divider no-line"></section>
-            <section class="main-title no-outline">INSTAGRAM</section>
+            <h2 class="main-title no-outline">INSTAGRAM</h2>
 
 
             <section class="DisplayGrid Style1  span-four span-one-vert">
@@ -83,7 +82,7 @@
             </section>
 
 
-            <section class="main-title no-outline">ITCH</section>
+            <h2 class="main-title no-outline">ITCH</h2>
 
             <!--==================================================================
 BEGIN DISPLAY
@@ -106,7 +105,7 @@ EDGE BAR
                 <a class="pseudo-section Style2 b2 clickable" href="https://puddleglum.itch.io/" target="_blank"></a>
             </section>
 
-            <section class="main-title no-outline">TUMBLR</section>
+            <h2 class="main-title no-outline">TUMBLR</h2>
 
 
             <section class="DisplayGrid Style1 span-three-vert span-four ">
@@ -130,7 +129,7 @@ EDGE BAR
 
 
 
-            <section class="main-title no-outline">CONTACTS</section>
+            <h2 class="main-title no-outline">CONTACTS</h2>
 
             <section class="DisplayGrid Style1 span-four ">
 
