Revert "Updated Tags"
This reverts commit 4653ba63d24fcd9c904b4c3c01cc4d3548992fd5.

--- a/Art.html
+++ b/Art.html
@@ -42,10 +42,10 @@
     <div id="preloader"></div>
 
     <header>
-        <h1 class="pseudo-section header-button"><a href="Social.html">SOCIAL</a></h1>
-        <h1 class="pseudo-section header-button"><a href="Games.html">GAMES</a></h1>
 
-        
+        <section class="HeaderButton"><a href="Social.html">SOCIAL</a></section>
+        <section class="HeaderButton"><a href="Games.html">GAMES</a></section>
+
         <section class="MenuWrapper no-outline Home">
             <a href="index.html" class="home-link"></a>
             <section class="MenuMoon Moon1"><img src="assets/images/Moons/Full Moon.png"></section>
@@ -54,10 +54,11 @@
             <section class="MenuMoon Moon4"><img src="assets/images/Moons/Cresent Moon 2.png"></section>
             <section class="MenuMoon Moon5"><img src="assets/images/Moons/Cresent Moon Flip 2.png"></section>
         </section>
+        <section class="HeaderButton"><a href="Art.html">ART</a></section>
+        <section class="HeaderButton"><a href="https://puddleglum.itch.io/" target="_blank">ITCH</a></section>
 
-        <h1 class="pseudo-section header-button"><a href="Art.html">ART</a></h1>
-        <h1 class="pseudo-section header-button"><a href="https://puddleglum.itch.io/" target="_blank">ITCH</a></h1>
-    </header> 
+
+    </header>
     <div class="GridWrapper">
         <section class="GlobalGrid">
 
@@ -68,7 +69,7 @@
 
 
             <section class="section-divider no-line micro"></section>
-            <h1 class="main-title no-outline align-center span-one-vert">ART</h1>
+            <section class="main-title no-outline align-center">ART</section>
 
 
             <section class="section-divider"></section>
