--- a/Social.html
+++ b/Social.html
@@ -41,8 +41,9 @@
     <div id="preloader"></div>
 
     <header>
-        <h1 class="pseudo-section header-button"><a href="Social.html">SOCIAL</a></h1>
-        <h1 class="pseudo-section header-button"><a href="Games.html">GAMES</a></h1>
+        <section class="HeaderButton"><a href="Social.html">SOCIAL</a></section>
+        <section class="HeaderButton"><a href="Games.html">GAMES</a></section>
+
         <section class="MenuWrapper no-outline Home">
             <a href="index.html" class="home-link"></a>
             <section class="MenuMoon Moon1"><img src="assets/images/Moons/Full Moon.png"></section>
@@ -52,14 +53,14 @@
             <section class="MenuMoon Moon5"><img src="assets/images/Moons/Cresent Moon Flip 2.png"></section>
         </section>
 
-        <h1 class="pseudo-section header-button"><a href="Art.html">ART</a></h1>
-        <h1 class="pseudo-section header-button"><a href="https://puddleglum.itch.io/" target="_blank">ITCH</a></h1>
-    </header> 
+        <section class="HeaderButton"><a href="Art.html">ART</a></section>
+        <section class="HeaderButton"><a href="https://puddleglum.itch.io/" target="_blank">ITCH</a></section>
+    </header>
 
     <div class="GridWrapper">
         <section class="GlobalGrid">
             <section class="section-divider no-line"></section>
-            <h2 class="main-title no-outline">INSTAGRAM</h2>
+            <section class="main-title no-outline">INSTAGRAM</section>
 
 
             <section class="DisplayGrid Style1  span-four span-one-vert">
@@ -82,7 +83,7 @@
             </section>
 
 
-            <h2 class="main-title no-outline">ITCH</h2>
+            <section class="main-title no-outline">ITCH</section>
 
             <!--==================================================================
 BEGIN DISPLAY
@@ -105,7 +106,7 @@ EDGE BAR
                 <a class="pseudo-section Style2 b2 clickable" href="https://puddleglum.itch.io/" target="_blank"></a>
             </section>
 
-            <h2 class="main-title no-outline">TUMBLR</h2>
+            <section class="main-title no-outline">TUMBLR</section>
 
 
             <section class="DisplayGrid Style1 span-three-vert span-four ">
@@ -129,7 +130,7 @@ EDGE BAR
 
 
 
-            <h2 class="main-title no-outline">CONTACTS</h2>
+            <section class="main-title no-outline">CONTACTS</section>
 
             <section class="DisplayGrid Style1 span-four ">
 
