--- a/Games.html
+++ b/Games.html
@@ -18,10 +18,10 @@
         <meta name="description"
         content="Puddle studios is a solo indie game dev studio located in Florida. currently working on 'Forgotten God'.">
 
-        <meta property="og:url" content="https://puddle-studios.com/Games">
-        <meta property="og:type" content="website">
-        <meta property="og:title" content="Puddle Studios">
-        <meta property="og:description"
+    <meta property="og:url" content="https://puddle-studios.com/Games">
+    <meta property="og:type" content="website">
+    <meta property="og:title" content="Puddle Studios">
+    <meta property="og:description"
         content="Puddle studios is a solo indie game dev studio located in Florida. currently working on 'Forgotten God'.">
         <meta property="og:image" content="https://puddle-studios.com/assets/images/Embed Cover.png">
 
@@ -40,8 +40,10 @@
     <div id="preloader"></div>
 
     <header>
-        <h1 class="pseudo-section header-button"><a href="Social.html">SOCIAL</a></h1>
-        <h1 class="pseudo-section header-button"><a href="Games.html">GAMES</a></h1>
+
+        <section class="HeaderButton"><a href="Social.html">SOCIAL</a></section>
+        <section class="HeaderButton"><a href="Games.html">GAMES</a></section>
+
         <section class="MenuWrapper no-outline Home">
             <a href="index.html" class="home-link"></a>
             <section class="MenuMoon Moon1"><img src="assets/images/Moons/Full Moon.png"></section>
@@ -50,10 +52,11 @@
             <section class="MenuMoon Moon4"><img src="assets/images/Moons/Cresent Moon 2.png"></section>
             <section class="MenuMoon Moon5"><img src="assets/images/Moons/Cresent Moon Flip 2.png"></section>
         </section>
+        <section class="HeaderButton"><a href="Art.html">ART</a></section>
+        <section class="HeaderButton"><a href="https://puddleglum.itch.io/" target="_blank">ITCH</a></section>
 
-        <h1 class="pseudo-section header-button"><a href="Art.html">ART</a></h1>
-        <h1 class="pseudo-section header-button"><a href="https://puddleglum.itch.io/" target="_blank">ITCH</a></h1>
-    </header> 
+
+    </header>
 
     <div class="GridWrapper">
         <section class="GlobalGrid">
@@ -63,7 +66,7 @@
             <section class="section-divider no-line micro"></section>
 
 
-            <h1 class="main-title align-center">games</h1>
+            <section class="main-title align-center">games</section>
             <section class="section-divider"></section>
 
 
@@ -80,7 +83,7 @@
 
 
             <section class="section-divider no-line micro"></section>
-            <h2 class="main-title no-outline">Labyrinth</h2>
+            <section class="main-title no-outline">Labyrinth</section>
             <section class="section-divider"></section>
             <section class="section-divider no-line small"></section>
 
@@ -105,7 +108,7 @@
 
 
             <section class="section-divider no-line micro"></section>
-            <h2 class="main-title no-outline">The Designer</h2>
+            <section class="main-title no-outline">The Designer</section>
             <section class="section-divider"></section>
             <section class="section-divider no-line small"></section>
             <section class="DisplayGrid Style1 span-four">
@@ -131,7 +134,7 @@
 
             <section class="DisplayGrid Style2 span-three-vert span-two no-outline">
 
-                <h2 class="second-title span-four align-center">MechMaze</h2>
+                <section class="second-title span-four align-center">MechMaze</section>
 
                 <section class="span-three span-three-vert hide-overflow clickable">
                     <a href="Game Pages/MechMaze.html"> <img src="assets/images/Mechanical Labyrinth Web Logo.png"></a>
@@ -147,7 +150,7 @@
             </section>
             <section class="DisplayGrid Style2 span-three-vert span-two no-outline">
 
-                <h2 class="second-title span-four align-center">Babylon</h2>
+                <section class="second-title span-four align-center">Babylon</section>
 
 
                 <a class="pseudo-section span-one span-one-vert b1 Style5 clickable" href="Game Pages/Babylon.html"></a>
@@ -169,7 +172,7 @@
 
 
             <section class="section-divider no-line micro"></section>
-            <h2 class="main-title no-outline">Planetarium</h2>
+            <section class="main-title no-outline">Planetarium</section>
             <section class="section-divider"></section>
             <section class="section-divider no-line small"></section>
             <section class="DisplayGrid Style1 span-four span-one-vert no-outline">
@@ -195,7 +198,7 @@
 
 
             <section class="DisplayGrid Style2 span-three-vert span-two no-outline">
-                <h2 class="second-title span-two align-center span-one-vert">Stelarium</h2>
+                <section class="second-title span-two align-center span-one-vert">Stelarium</section>
 
 
 
@@ -217,7 +220,7 @@
 
 
             <section class="DisplayGrid Style2 span-three-vert span-two no-outline">
-                <h2 class="second-title span-four align-center span-one-vert">UNO</h2>
+                <section class="second-title span-four align-center span-one-vert">UNO</section>
 
 
                 <a class="pseudo-section span-one span-three-vert b1 Style11 clickable" href="Game Pages\Uno.html"></a>
@@ -233,7 +236,7 @@
             </section>
 
             <section class="section-divider no-line small"></section>
-            <h1 class="main-title no-outline">Game of Life</h1>
+            <section class="main-title no-outline">Game of Life</section>
             <section class="section-divider"></section>
             <section class="section-divider no-line small"></section>
             <section class="DisplayGrid Style1 span-four">
