Fixed all bugs with header

--- a/index.html
+++ b/index.html
@@ -57,8 +57,8 @@
 
 
     <header>
-        <section class="HeaderButton"><a href="Social.html">SOCIAL</a></section>
-        <section class="HeaderButton"><a href="Games.html">GAMES</a></section>
+        <section class="header-button"><a href="Social.html">SOCIAL</a></section>
+        <section class="header-button"><a href="Games.html">GAMES</a></section>
         <section class="MenuWrapper no-outline Home">
             <a href="index.html" class="home-link"></a>
             <section class="MenuMoon Moon1"><img src="assets/images/Moons/Full Moon.png"></section>
@@ -68,15 +68,15 @@
             <section class="MenuMoon Moon5"><img src="assets/images/Moons/Cresent Moon Flip 2.png"></section>
         </section>
 
-        <section class="HeaderButton"><a href="Art.html">ART</a></section>
-        <section class="HeaderButton"><a href="https://puddleglum.itch.io/" target="_blank">ITCH</a></section>
+        <section class="header-button"><a href="Art.html">ART</a></section>
+        <section class="header-button"><a href="https://puddleglum.itch.io/" target="_blank">ITCH</a></section>
     </header>
 
     <div class="GridWrapper">
         <section class="GlobalGrid">
             <section class="section-divider no-line"></section>
 
-            <section class="main-title no-outline">PUDDLE STUDIOS</section>
+            <h1 class="main-title no-outline">PUDDLE STUDIOS</h1>
 
             <section class="hero">
                 <section class="hero-card Style2">
