--- a/Social.html
+++ b/Social.html
@@ -41,8 +41,8 @@
     <div id="preloader"></div>
 
     <header>
-        <section class="HeaderButton"><a href="Social.html">SOCIAL</a></section>
-        <section class="HeaderButton"><a href="Games.html">GAMES</a></section>
+        <section class="header-button"><a href="Social.html">SOCIAL</a></section>
+        <section class="header-button"><a href="Games.html">GAMES</a></section>
 
         <section class="MenuWrapper no-outline Home">
             <a href="index.html" class="home-link"></a>
@@ -53,8 +53,8 @@
             <section class="MenuMoon Moon5"><img src="assets/images/Moons/Cresent Moon Flip 2.png"></section>
         </section>
 
-        <section class="HeaderButton"><a href="Art.html">ART</a></section>
-        <section class="HeaderButton"><a href="https://puddleglum.itch.io/" target="_blank">ITCH</a></section>
+        <section class="header-button"><a href="Art.html">ART</a></section>
+        <section class="header-button"><a href="https://puddleglum.itch.io/" target="_blank">ITCH</a></section>
     </header>
 
     <div class="GridWrapper">
