--- a/Social.html
+++ b/Social.html
@@ -3,6 +3,8 @@
 
 <head>
     <title>Puddle Studios</title>
+    <link rel="icon" href="/assets/Favicon-128.ico">
+
     <link rel="stylesheet" href="assets/css/styles.css">
     <link rel="canonical" href="https://puddle-studios.com/Social.html" />
 
