Fixed Favicon (again)

--- a/Games.html
+++ b/Games.html
@@ -42,7 +42,9 @@
 
 <body class="body">
     <div id="preloader"></div>
-
+    <h1 class="invisible">
+        Puddle studios is an indie game developement studio located in florida, founded in 2020 by puddle.
+    </h1>
     <header>
 
         <section class="header-button"><a href="Social.html">SOCIAL</a></section>
