--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     
 <head>
     <title>Puddle Studios</title>
-    <link rel="icon" href="/assets/Favicon-128.ico">
+    <link rel="icon" href="/assets/Favicon-128.ico" />
 
     <link rel="stylesheet" href="assets/css/styles.css">
 
@@ -55,7 +55,9 @@
 
 <body class="body">
     <div id="preloader"></div>
-
+    <h1 class="invisible">
+        Puddle studios is an indie game developement studio located in florida, founded in 2020 by puddle.
+    </h1>
 
     <header>
         <section class="header-button"><a href="Social.html">SOCIAL</a></section>
