--- a/Games.html
+++ b/Games.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         
-        <title>Puddle Studios</title>
+        <title>Puddle Studios | Games</title>
         <link rel="icon" href="/assets/Favicon-128.ico">
 
 
