--- a/Social.html
+++ b/Social.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-    <title>Puddle Studios</title>
+    <title>Puddle Studios | Social</title>
     <link rel="icon" href="/assets/Favicon-128.ico">
 
     <link rel="stylesheet" href="assets/css/styles.css">
