--- a/Art.html
+++ b/Art.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-    <title>Puddle Studios</title>
+    <title>Puddle Studios | Art</title>
     <link rel="icon" href="/assets/Favicon-128.ico" />
 
 
