--- a/Art.html
+++ b/Art.html
@@ -3,7 +3,7 @@
 
 <head>
     <title>Puddle Studios | Art</title>
-    <link rel="icon" href="/assets/Favicon-128.ico" />
+    <link rel="icon" href="Favicon-128.ico" />
 
 
     <link rel="stylesheet" href="assets/css/styles.css">
