--- a/Social.html
+++ b/Social.html
@@ -3,7 +3,7 @@
 
 <head>
     <title>Puddle Studios | Social</title>
-    <link rel="icon" href="/assets/Favicon-128.ico">
+    <link rel="icon" href="Favicon-128.ico" />
 
     <link rel="stylesheet" href="assets/css/styles.css">
     <link rel="canonical" href="https://puddle-studios.com/Social.html" />
