--- a/Art.html
+++ b/Art.html
@@ -3,18 +3,19 @@
 
 <head>
     <title>Puddle Studios | Art</title>
-    <link rel="icon" href="Favicon-144.ico" />
 
 
     <link rel="stylesheet" href="assets/css/styles.css">
     <link rel="canonical" href="https://puddle-studios.com/Art.html" />
+    <link rel="icon" href="Favicon-144.ico" />
 
+<!-- 
     <link rel="icon" type="image/png" href="/assets/images/Icons/favicon/favicon-48x48.png" sizes="48x48" />
     <link rel="icon" type="image/svg+xml" href="/assets/images/Icons/favicon/favicon.svg" />
     <link rel="shortcut icon" href="/assets/images/Icons/favicon/favicon.ico" />
     <link rel="apple-touch-icon" sizes="180x180" href="/assets/images/Icons/favicon/apple-touch-icon.png" />
     <meta name="apple-mobile-web-app-title" content="Puddle Studios" />
-    <link rel="manifest" href="/assets/images/Icons/favicon/site.webmanifest" />
+    <link rel="manifest" href="/assets/images/Icons/favicon/site.webmanifest" /> -->
 
     </link>
     <meta name=“robots” content="index, follow">
