Adjusted meta tags and fixed uno page

--- a/Game Pages/Uno.html
+++ b/Game Pages/Uno.html
@@ -83,10 +83,9 @@
             <section class="section-divider no-line micro"></section>
 
             <section class="span-four no-outline desktop-exclusive">
-                <iframe frameborder="0" src="https://itch.io/embed-upload/11735995?color=0a090f" width="850"
-                    height="500"><a href="https://puddleglum.itch.io/uno">Play Uno on itch.io</a></iframe>
-            </section>
+                <iframe frameborder="0" src="https://itch.io/embed-upload/11828948?color=0a090f" allowfullscreen="" width="850" height="500"><a href="https://puddleglum.itch.io/uno">Play Uno on itch.io</a></iframe>
 
+            </section>
             <section class="section-divider no-line micro"></section>
             <section class="CrossBarSection Style1 b3 b4 desktop-exclusive"></section>
             <section class="section-divider no-line small"></section>
