--- a/Social.html
+++ b/Social.html
@@ -1,48 +1,75 @@
 <!DOCTYPE html>
 <html>
+    <head>
+        <title>Puddle Studios | Social</title>
+    
+        <link rel="stylesheet" href="assets/css/styles.css">
+        <link rel="canonical" href="https://puddle-studios.com/Social.html" />
+        <link rel="icon" href="Favicon-144.ico" />
+        <meta name=“robots” content="index, follow">
+    
+        <meta name='description'
+            content='Puddle Studios digital Social page, Instagram tumblr and contacts. Reach out to PuddleglumStudio@gmail.com for more information.'>
 
-<head>
-    <title>Puddle Studios | Social</title>
-
-    <link rel="stylesheet" href="assets/css/styles.css">
-    <link rel="canonical" href="https://puddle-studios.com/Social.html" />
-    <link rel="icon" href="Favicon-144.ico" />
-
-    <!-- <link rel="icon" type="image/png" href="/assets/images/Icons/favicon/favicon-48x48.png" sizes="48x48" />
-    <link rel="icon" type="image/svg+xml" href="/assets/images/Icons/favicon/favicon.svg" />
-    <link rel="shortcut icon" href="/assets/images/Icons/favicon/favicon.ico" />
-    <link rel="apple-touch-icon" sizes="180x180" href="/assets/images/Icons/favicon/apple-touch-icon.png" />
-    <meta name="apple-mobile-web-app-title" content="Puddle Studios" />
-    <link rel="manifest" href="/assets/images/Icons/favicon/site.webmanifest" /> -->
-    <meta name=“robots” content="index, follow">
+        <meta name='keywords' content='puddle, puddle studios, puddle studios social, indie games, game developer, game dev'>
+        <meta name='subject' content='Puddle Studios Portfolio and Buisness'>
+        <meta name='copyright' content='Puddle Studios'>
 
 
-    <meta name="description"
-    content="Puddle studios is a solo indie game dev studio located in Florida. currently working on 'Forgotten God'.">
+        <meta name='author' content='Rowan Byington, PuddleglumStudio@gmail.com'>
+        <meta name='reply-to' content='PuddleglumStudio@gmail.com'>
+        <meta name='url' content='https://puddle-studios.com/Social'>
+        <meta name='identifier-URL' content='https://puddle-studios.com/Social'>
+        <meta name='pagename' content='Puddle Studios Social'>
+        <meta name='subtitle' content='Puddle Studios | Indie Games | Social'>
 
-<meta property="og:url" content="https://puddle-studios.com">
-<meta property="og:type" content="website">
-<meta property="og:title" content="Puddle Studios">
-<meta property="og:description"
-    content="Puddle studios is a solo indie game dev studio located in Florida. currently working on 'Forgotten God'.">
-    <meta property="og:image" content="https://puddle-studios.com/assets/images/Embed Cover.png">
+        <!--===========================
+        OPEN GRAPH TAGS 
+        ============================-->
+        <meta property="og:url" content="https://puddle-studios.com/Social">
+        <meta property="og:type" content="website">
+        <meta property="og:title" content="Puddle Studios">
+        <meta property="og:description"
+            content="Puddle studios is a solo indie game dev studio located in Florida. currently working on 'Forgotten God'.">
+        <meta property="og:image" content="https://puddle-studios.com/assets/images/Embed Cover.png">
+        <!--===========================
+        OPEN GRAPH TAGS | TWITTER
+        ============================-->
+        <meta name="twitter:card" content="summary_large_image">
+        <meta property="twitter:domain" content="puddle-studios.com">
+        <meta property="twitter:url" content="https://puddle-studios.com/Social">
+        <meta name="twitter:title" content="Puddle Studios">
+        <meta name="twitter:description"
+            content="Puddle studios is a solo indie game dev studio located in Florida. currently working on 'Forgotten God'.">
+        <meta property="twitter:image" content="https://puddle-studios.com/assets/images/Embed Cover.png">
+    </head>
 
-<meta name="twitter:card" content="summary_large_image">
-<meta property="twitter:domain" content="puddle-studios.com">
-<meta property="twitter:url" content="https://puddle-studios.com">
-<meta name="twitter:title" content="Puddle Studios">
-<meta name="twitter:description"
-    content="Puddle studios is a solo indie game dev studio located in Florida. currently working on 'Forgotten God'.">
-    <meta property="twitter:image" content="https://puddle-studios.com/assets/images/Embed Cover.png">
 
-</head>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
 <body class="body">
     <div id="preloader"></div>
     <h1 class="invisible">
-        Puddle studios is an indie game developement studio located in florida, founded in 2020 by puddle.
+        Puddle Studios digital Social page, Instagram tumblr and contacts. Reach out to PuddleglumStudio@gmail.com for more information.
     </h1>
 
     <header>
