--- a/Game Pages/Uno.html
+++ b/Game Pages/Uno.html
@@ -36,23 +36,21 @@
 
 
 
+   
     <header>
-
-        <section class="HeaderButton"><a href="../Social.html">SOCIAL</a></section>
-        <section class="HeaderButton"><a href="../Games.html">GAMES</a></section>
-
+        <section class="header-button"><a href="Social.html">SOCIAL</a></section>
+        <section class="header-button"><a href="Games.html">GAMES</a></section>
         <section class="MenuWrapper no-outline Home">
-            <a href="../index.html" class="home-link"></a>
-            <section class="MenuMoon Moon1"><img src="../assets/images/Moons/Full Moon.png"></section>
-            <section class="MenuMoon Moon2"><img src="../assets/images/Moons/Cresent Moon 1.png"></section>
-            <section class="MenuMoon Moon3"><img src="../assets/images/Moons/Cresent Moon Flip 1.png"></section>
-            <section class="MenuMoon Moon4"><img src="../assets/images/Moons/Cresent Moon 2.png"></section>
-            <section class="MenuMoon Moon5"><img src="../assets/images/Moons/Cresent Moon Flip 2.png"></section>
+            <a href="index.html" class="home-link"></a>
+            <section class="MenuMoon Moon1"><img src="assets/images/Moons/Full Moon.png"></section>
+            <section class="MenuMoon Moon2"><img src="assets/images/Moons/Cresent Moon 1.png"></section>
+            <section class="MenuMoon Moon3"><img src="assets/images/Moons/Cresent Moon Flip 1.png"></section>
+            <section class="MenuMoon Moon4"><img src="assets/images/Moons/Cresent Moon 2.png"></section>
+            <section class="MenuMoon Moon5"><img src="assets/images/Moons/Cresent Moon Flip 2.png"></section>
         </section>
-        <section class="HeaderButton"><a href="../Art.html">ART</a></section>
-        <section class="HeaderButton"><a href="https://puddleglum.itch.io/" target="_blank">ITCH</a></section>
 
-
+        <section class="header-button"><a href="Art.html">ART</a></section>
+        <section class="header-button"><a href="https://puddleglum.itch.io/" target="_blank">ITCH</a></section>
     </header>
 
     <section class="GridWrapper">
