Fixed game page haeder buttons after breaking them

--- a/Game Pages/GOL.html
+++ b/Game Pages/GOL.html
@@ -41,11 +41,11 @@
         <section class="header-button"><a href="Games.html">GAMES</a></section>
         <section class="MenuWrapper no-outline Home">
             <a href="index.html" class="home-link"></a>
-            <section class="MenuMoon Moon1"><img src="assets/images/Moons/Full Moon.png"></section>
-            <section class="MenuMoon Moon2"><img src="assets/images/Moons/Cresent Moon 1.png"></section>
-            <section class="MenuMoon Moon3"><img src="assets/images/Moons/Cresent Moon Flip 1.png"></section>
-            <section class="MenuMoon Moon4"><img src="assets/images/Moons/Cresent Moon 2.png"></section>
-            <section class="MenuMoon Moon5"><img src="assets/images/Moons/Cresent Moon Flip 2.png"></section>
+            <section class="MenuMoon Moon1"><img src="../assets/images/Moons/Full Moon.png"></section>
+            <section class="MenuMoon Moon2"><img src="../assets/images/Moons/Cresent Moon 1.png"></section>
+            <section class="MenuMoon Moon3"><img src="../assets/images/Moons/Cresent Moon Flip 1.png"></section>
+            <section class="MenuMoon Moon4"><img src="../assets/images/Moons/Cresent Moon 2.png"></section>
+            <section class="MenuMoon Moon5"><img src="../assets/images/Moons/Cresent Moon Flip 2.png"></section>
         </section>
 
         <section class="header-button"><a href="Art.html">ART</a></section>
