Fixed game page links to home

--- a/Game Pages/MechMaze.html
+++ b/Game Pages/MechMaze.html
@@ -36,10 +36,9 @@
 
 
 
-    
     <header>
-        <section class="header-button"><a href="Social.html">SOCIAL</a></section>
-        <section class="header-button"><a href="Games.html">GAMES</a></section>
+        <section class="header-button"><a href="../Social.html">SOCIAL</a></section>
+        <section class="header-button"><a href="../Games.html">GAMES</a></section>
         <section class="MenuWrapper no-outline Home">
             <a href="index.html" class="home-link"></a>
             <section class="MenuMoon Moon1"><img src="../assets/images/Moons/Full Moon.png"></section>
@@ -49,7 +48,7 @@
             <section class="MenuMoon Moon5"><img src="../assets/images/Moons/Cresent Moon Flip 2.png"></section>
         </section>
 
-        <section class="header-button"><a href="Art.html">ART</a></section>
+        <section class="header-button"><a href="../Art.html">ART</a></section>
         <section class="header-button"><a href="https://puddleglum.itch.io/" target="_blank">ITCH</a></section>
     </header>
 
