--- a/Game Pages/Babylon.html
+++ b/Game Pages/Babylon.html
@@ -5,12 +5,8 @@
     <title>Puddle Studios Babylon</title>
     <link rel="stylesheet" href="../assets/css/styles.css">
     
-    <link rel="icon" type="image/png" href="/assets/images/Icons/favicon/favicon-48x48.png" sizes="48x48" />
-    <link rel="icon" type="image/svg+xml" href="/assets/images/Icons/favicon/favicon.svg" />
-    <link rel="shortcut icon" href="/assets/images/Icons/favicon/favicon.ico" />
-    <link rel="apple-touch-icon" sizes="180x180" href="/assets/images/Icons/favicon/apple-touch-icon.png" />
-    <meta name="apple-mobile-web-app-title" content="Puddle Studios" />
-    <link rel="manifest" href="/assets/images/Icons/favicon/site.webmanifest" />
+    <link rel="shortcut icon" href="../Favicon-144.ico" />
+
     
     <meta name=“robots” content=index, follow”>
     <meta name="description" content="Babylon by puddle studios">
