--- a/index.html
+++ b/index.html
@@ -75,11 +75,18 @@
         <section class="header-button"><a href="Art.html">ART</a></section>
         <section class="header-button"><a href="https://puddleglum.itch.io/" target="_blank">ITCH</a></section>
     </header>
-
+    <div class="invisible">
+        Puddle Studios, an innovative indie game development studio based in Florida, is creating waves in the gaming world with its latest commercial release, 
+        Forgotten God. Known for their commitment to unique storytelling and immersive gameplay, Puddle Studios combines artistry and technology to deliver 
+        captivating experiences for gamers of all kinds. Forgotten God promises a compelling journey through an ancient, mystical world where players uncover secrets, 
+        face challenging puzzles, and explore richly detailed environments. With this new release, Puddle Studios aims to solidify its position as a top indie studio, 
+        making Florida a notable destination in the global gaming industry. Keep an eye out for Forgotten God—a game that captures the essence of indie creativity and adventure!
+    </div>
     <div class="GridWrapper">
         <section class="GlobalGrid">
             <section class="section-divider no-line"></section>
-
+   
+              
             <h1 class="main-title no-outline">PUDDLE STUDIOS</h1>
 
             <section class="hero">
