--- a/Art.html
+++ b/Art.html
@@ -70,6 +70,13 @@
 
 
     </header>
+    <div class="invisible">
+        Puddle Studios, an innovative indie game development studio based in Florida, is creating waves in the gaming world with its latest commercial release, 
+        Forgotten God. Known for their commitment to unique storytelling and immersive gameplay, Puddle Studios combines artistry and technology to deliver 
+        captivating experiences for gamers of all kinds. Forgotten God promises a compelling journey through an ancient, mystical world where players uncover secrets, 
+        face challenging puzzles, and explore richly detailed environments. With this new release, Puddle Studios aims to solidify its position as a top indie studio, 
+        making Florida a notable destination in the global gaming industry. Keep an eye out for Forgotten God—a game that captures the essence of indie creativity and adventure!
+    </div>
     <div class="GridWrapper">
         <section class="GlobalGrid">
 
